--- a/.env
+++ b/.env
@@ -1,39 +1,14 @@
-noe# == Core API Credentials (Required) ==
-TS_API_KEY=7K8AFijHapYr3/7DjSN7Le5H6NH67c0YEu9aXB610Os=
-TS_USERNAME=cay7man
-TS_API_PASSWORD=ILoveMyCx30$
+# .env file for TradeForgePy
 
-# Try both formats to ensure one works
-API_KEY=7K8AFijHapYr3/7DjSN7Le5H6NH67c0YEu9aXB610Os=
-USERNAME=cay7man
-PASSWORD=ILoveMyCx30$
+# == Core API Credentials (Required) ==
+TS_USERNAME="cay7man"
+TS_API_KEY="7K8AFijHapYr3/7DjSN7Le5H6NH67c0YEu9aXB610Os="
 
 # == Environment Selection (Required) ==
-# Set to "LIVE" for the production TopStepX environment,
-# or "DEMO" for the ProjectX demo/testing environment.
-TS_TRADING_ENV="LIVE" # Options: "LIVE", "DEMO"
-TRADING_ENVIRONMENT="LIVE"
-ACCOUNT_ID_TO_WATCH=8032276
-DEFAULT_ACCOUNT_ID_TO_WATCH=8032276
-CONTRACT_ID="CON.F.US.EP.M25"
+# Set to "LIVE" for the production TopStepX environment, or "DEMO" for the demo environment.
+TS_ENVIRONMENT="LIVE"
 
-# == Optional: Default values for scripts & library components ==
-TSX_DEFAULT_CONTRACT_ID="CON.F.US.EP.M25" # Default contract for bot/market data tester
-TSX_DEFAULT_ACCOUNT_ID=8032276     # Default account for order watcher/trading bot (set your ID)
-CONTRACT_ID="CON.F.US.MNQ.M25"
-
-# == Optional: For Authorized Application Auth (if you use this method) ==
-# APP_PASSWORD="YOUR_APP_PASSWORD"
-# APP_ID="YOUR_APP_ID"
-# APP_VERIFY_KEY="YOUR_APP_VERIFY_KEY"
-
-# == Optional: For specific integration tests ==
-# TEST_GAP_CONTRACT_ID="CON.F.US.ENQ.M25"
-# TEST_GAP_LAST_TS="2025-05-16T04:20:00+00:00"
-
-# == ADVANCED: Manual URL Overrides (Use TRADING_ENVIRONMENT for standard Demo/Live switching) ==
-# If set, these will override the URLs selected by TRADING_ENVIRONMENT.
-# Use with caution, primarily for non-standard or private test environments.
-# API_BASE_URL_OVERRIDE_ENV=""
-# MARKET_HUB_URL_OVERRIDE_ENV=""
-# USER_HUB_URL_OVERRIDE_ENV=""
+# == Default values for Capture/Test Scripts (Required by examples/03_test_provider_streams.py) ==
+# Use a liquid contract like ESU4 (E-mini S&P) or NQU4 (E-mini Nasdaq) for testing.
+TS_CAPTURE_CONTRACT_ID="ESU4"
+TS_CAPTURE_ACCOUNT_ID="8391036" # Make sure this is your numeric LIVE account ID
