--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ TS_ENVIRONMENT="LIVE"
 
 # == Default values for Capture/Test Scripts (Required by examples/03_test_provider_streams.py) ==
 # Use a liquid contract like ESU4 (E-mini S&P) or NQU4 (E-mini Nasdaq) for testing.
-TS_CAPTURE_CONTRACT_ID="ESU4"
+TS_CAPTURE_CONTRACT_ID="CON.F.US.MES.M25"
 TS_CAPTURE_ACCOUNT_ID="8391036" # Make sure this is your numeric LIVE account ID
